  * Upgrade to Spring Security 3.0.3.RELEASE.
  * Upgrade to Ehcache 2.1.0.
  * Upgrade to commons-fileupload-1.2.2.

Bugfixes:

  * Fix template parsing when <includeonly>|</includeonly> is used.
  * Fix template parsing for syntax like "{{{template}}".
  * Interwiki links with no topic name of the form "[[interwiki:]]" should link
    to the root page of the interwiki target site.
  * Images with multiple captions ([[Image:Example.gif|caption1|caption2]])
    should only render the last caption value specified.
  * Fix a design flaw in processing of nested metadata, such as categories
    included via templates or "link to" in records in image captions.
  * A corrupt image should not halt page parsing; instead just display the
    image name as text.
  * Refactor image processing code to use less memory and avoid OOM errors.
  * For SVG images and other images that cannot be resized by the JVM, return
    a link to the image file rather than an upload link or error message.
  * When importing topics with Special:Import convert from Mediawiki to JAMWiki
    namespace for additional patterns including "[[:", "{{", and "{{:".

Translation Updates:

  * Updated German translations (axelclk).
  * Updated Russian translations (shar).


0.9.2
=====

New Features:

  * Update the LDAP sample in applicationContext-security.xml with an example
    of using LDAP for authentication and JAMWiki for role management.  Provided
    by Bobby Lawrence.

Bugfixes:

  * Fix list parsing for lists that end with </td> or </div>.
  * Fix the manual upgrade steps for namespace in the UPGRADE.txt document.
    Reported by an anonymous user.
  * Fix an issue in which non-image file uploads could fail on some operating
    systems.  Reported by an anonymous user.
  * Fix an invalid "You may not remove ROLE_SYSADMIN from your own account"
    message on the Special:Roles page when updating the sysadmin account.
  * Make sure all tables are properly migrated when using the