@@ -1,0 +1,5 @@
+<p><a href="/wiki/en/Example1" title="Example1">Example1</a></p>
+<p><a href="/wiki/test/Example1" title="Example1">Example1</a></p>
+<p><a href="/wiki/en/Special:Edit?topic=Non-existent" class="edit" title="Non-existent">Non-existent</a></p>
+<p><a href="/wiki/test/Special:Edit?topic=Non-existent" class="edit" title="Non-existent">Non-existent</a></p>
+<p><a href="/wiki/test/VirtualWiki1" title="VirtualWiki1">VirtualWiki1</a></p>
